# pythonista.com.br

./: .env.example  README.md  pyproject.toml
apps/chatbot/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
apps/chatbot/migrations/: 0001_initial.py  0002_agentaiconversationlog.py
apps/finance/: admin.py  forms.py  managers.py  models.py  urls.py  utils.py  views.py
apps/finance/migrations/: 0001_initial.py  0002_alter_transactioncategory_options.py  0003_transaction_is_permanent_debt_transaction_debt.py  0004_transaction_is_paid.py  0005_alter_debt_options.py  0006_debt_user_transaction_owner.py  0007_rename_user_debt_owner.py
apps/notes/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
apps/notes/helpers/: context_helper.py
apps/notes/migrations/: 0001_initial.py  0002_notetag_note_tags.py  0003_alter_note_options.py  0004_note_is_public.py  0004_note_parent_folder_folder.py  0005_alter_note_parent_folder.py  0005_note_author.py
apps/notes/services/: note_service.py
apps/notes/templatetags/: render_md.py
apps/tasks/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
apps/tasks/helpers/: context_helper.py
apps/tasks/migrations/: 0001_initial.py  0002_alter_task_options.py
core/: forms.py  settings.py  urls.py
requirements/: base.txt
shared/: mappings.py  utils.py
static/css/: codehilite.css  custom.css
static/js/: custom.js  main.js
templates/layout/: auth.html  base.html  public_base.html
templates/partials/: header.html  navbar.html  page_header.html  pagination.html  sidebar.html
(+26 files in other folders)
